test/tests/operators/from_mysql/error_tls_invalid_option.txt
error: unknown key `bogus_option` in `tls` record
  --> tests/operators/from_mysql/error_tls_invalid_option.tql:12:16
   |
12 |            tls={bogus_option: true}
   |                ^^^^^^^^^^^^^^^^^^^^ 
   |
   = hint: valid keys are: skip_peer_verification, cacert, certfile, keyfile, min_version, ciphers, client_ca, require_client_cert
